# splade

./: CHANGES_AND_TODO.md  TRAIN.md  inference_splade.ipynb  pyproject.toml
conf/: CONFIG_CHOICE.py  config_synonyms.yaml
conf/train/data/: synonyms.yaml
notebooks/: makeDataset.ipynb  original_notebook.ipynb  training_toydata_1.ipynb
notebooks/data/: data.json  example_dataset.csv
splade/: retrieve.py  train.py
