[tool.poetry]
name = "splade"
version = "0.1.0"
description = "Turning Splade into a synonym extractor."
authors = ["Axel Vanraes <axel.vanraes@tiro.health>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
datasets = "^2.19.0"
transformers = "^4.40.1"
sentence-transformers = "^2.7.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
numba = "^0.59.1"
h5py = "^3.11.0"
tensorboard = "^2.16.2"
pytrec-eval = "^0.5"

[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
